--- a/index.html
+++ b/index.html
@@ -1,48 +1,40 @@
+
+
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Unofficial strains database</title>
-    <link href="https://stackpath.bootstrapcdn.com/bootswatch/4.1.1/yeti/bootstrap.min.css" rel="stylesheet" integrity="sha384-yAYSLJjzniZh9Kau9E1v1ma5CzvyHF8fPK/xUpaRx1XTH9r60WxzDivvHG3xm6Hn" crossorigin="anonymous">
-    <link rel="stylesheet" href="./css/style.css">
-</head>
-
-<body>
-    <header id="head"></header>
-
-    <div class="container">
-
-        <div>
-            <h1>Unofficial Weed database</h1>
-            <label for="searchWeed">Please start by entering a string (min. 3 characters) to fetch corresponding name(s), description(s) and some other minor information.</label>
-            <input type="text" id="searchWeed" class="form-control" placeholder="Please start here...">
-        </div>
-        <br>
-        <div>
-            <form>
-                <div class="form-group">
-                    <label for="raceSelection">Filter results by race:</label>
-                    <select id="raceSelection" class="form-control">
-                        <option value="sativa">sativa</option>
-                        <option value="indica">indica</option>
-                        <option value="hybrid" selected>hybrid</option>
-                    </select>
-                    <br>
-                    <button class="btn btn-primary" id="filter">Filter results</button>
-                    <button class="btn btn-secondary" id="clear">Clear filtering</button>
-                </div>
+    <head>
+        <meta charset="utf-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <title>Unofficial strains database</title>
+        <link href="https://stackpath.bootstrapcdn.com/bootswatch/4.1.1/yeti/bootstrap.min.css" rel="stylesheet" integrity="sha384-yAYSLJjzniZh9Kau9E1v1ma5CzvyHF8fPK/xUpaRx1XTH9r60WxzDivvHG3xm6Hn" crossorigin="anonymous">
+        <link rel="stylesheet" href="./css/style.css">
+    </head>
+    <body>
+        <header id="head"></header>
+        <div class="container">
+            <div>
+                <h1>Unofficial Weed database</h1>
+                <label for="searchWeed">Please start by entering a string (min. 3 characters) to fetch corresponding name(s), description(s) and some other minor information.</label>
+                <input type="text" id="searchWeed" class="form-control" placeholder="Please start here...">
+            </div>
+            <br>
+            <form class="form-inline">
+                <label for="raceSelection">Filter results by race:</label> &nbsp;
+                <select class="custom-select col-2" id="raceSelection">
+                    <option value="sativa">sativa</option>
+                    <option value="indica">indica</option>
+                    <option value="hybrid">hybrid</option>
+                </select>
+                &nbsp;
+                <button class="btn btn-primary" id="filter">Filter results</button>&nbsp;
+                <button class="btn btn-secondary" id="clear">Clear filtering</button>
             </form>
+            <br>
+            <div id="strains"></div>
         </div>
-        <br>
-        <div id="strains"></div>
-
-    </div>
-
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <script src="./js/main.js"></script>
-</body>
-
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+        <script src="./js/main.js"></script>
+    </body>
 </html>
+
